fix: overflow for sidebar with hover

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -119,7 +119,6 @@ nav .site-nav {
 
 nav .site-nav section {
   float: left;
-  max-width: calc(var(--nav-sidebar-width) + 50px);
   margin-top: -2px;
 }
 
@@ -235,7 +234,15 @@ ul:has(li input[type="checkbox"]) {
 ul li a {
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
+  text-overflow: clip;
+  width: calc(var(--nav-sidebar-width) + 25px);
+  background-color: white;
+}
+
+ul li a:hover {
+  white-space: nowrap;
+  width: 100%;
+  z-index: 10;
 }
 
 time {
@@ -314,6 +321,14 @@ a:visited {
 
   main > blockquote {
     border-color: white;
+  }
+
+  ul li a {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: clip;
+    width: calc(var(--nav-sidebar-width) + 25px);
+    background-color: black;
   }
 }
 
